first working website

--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@ safe: false
 
 ### site serving configuration ###
 exclude: [CNAME, README.md, .gitignore]
-permalink: / ## disables post output
+permalink: /:title ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
 
 
 ### content configuration ###
-title:       "SinglePaged - Title: Edit me in _config.yml!"
-keywords:    "SinglePaged, jekyll, template, github, blog, single page"
-description: "A single-page template for Jekyll based blogs (like what you'd use on github pages!)"
+title:       "Comment faire une formation agile en full remote"
+keywords:    "Agile, formation, remote, coronavirus, outils, jeux, online"
+description: "Une page pour lister les outils, les activités et la pédagogie pour faire unr formation agile en full remote"
 source_link: "https://github.com/t413/SinglePaged"
 favicon:     #put a path like: "img/favicon.ico"
 touch_icon:  #put a path like: "img/apple-touch-icon.png"
